Cleaning code structures

--- a/examples/testing.ipynb
+++ b/examples/testing.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-22T15:29:44.873363Z",
-     "start_time": "2019-11-22T15:29:44.304261Z"
+     "end_time": "2019-11-25T21:45:28.321535Z",
+     "start_time": "2019-11-25T21:45:27.689842Z"
     }
    },
    "outputs": [
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-22T15:29:47.842000Z",
-     "start_time": "2019-11-22T15:29:47.839459Z"
+     "end_time": "2019-11-25T18:19:42.585809Z",
+     "start_time": "2019-11-25T18:19:42.583384Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T17:03:34.976168Z",
-     "start_time": "2019-11-21T17:03:34.974155Z"
+     "end_time": "2019-11-25T18:10:04.350363Z",
+     "start_time": "2019-11-25T18:10:04.348615Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T17:03:40.138796Z",
-     "start_time": "2019-11-21T17:03:40.136944Z"
+     "end_time": "2019-11-25T18:10:04.521972Z",
+     "start_time": "2019-11-25T18:10:04.520352Z"
     }
    },
    "outputs": [],
@@ -91,8 +91,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T17:03:40.341183Z",
-     "start_time": "2019-11-21T17:03:40.339359Z"
+     "end_time": "2019-11-25T18:10:04.904749Z",
+     "start_time": "2019-11-25T18:10:04.902833Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-21T17:03:40.691074Z",
-     "start_time": "2019-11-21T17:03:40.689216Z"
+     "end_time": "2019-11-25T18:10:05.227578Z",
+     "start_time": "2019-11-25T18:10:05.225547Z"
     }
    },
    "outputs": [],
@@ -120,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-22T15:29:55.714667Z",
-     "start_time": "2019-11-22T15:29:55.489737Z"
+     "end_time": "2019-11-25T18:10:06.690953Z",
+     "start_time": "2019-11-25T18:10:06.684078Z"
     }
    },
    "outputs": [
@@ -240,6 +240,110 @@
    "source": [
     "import primes\n",
     "primes.primes(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-25T21:45:32.567276Z",
+     "start_time": "2019-11-25T21:45:32.561911Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/andrewmcallister/Documents/learning/work/causeinfer/examples'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-25T21:45:34.006269Z",
+     "start_time": "2019-11-25T21:45:34.003614Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "os.chdir('/Users/andrewmcallister/Documents/Learning/Work/causeinfer/cython_practice/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-25T21:45:40.524290Z",
+     "start_time": "2019-11-25T21:45:40.520477Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/andrewmcallister/Documents/learning/work/causeinfer/cython_practice'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-25T21:46:30.729654Z",
+     "start_time": "2019-11-25T21:46:30.713470Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import autopxd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-25T21:52:55.297258Z",
+     "start_time": "2019-11-25T21:52:55.288036Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-7e1279da36f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mautopxd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Rectangle.h'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test.pxd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "autopxd('Rectangle.h', 'test.pxd')"
    ]
   },
   {
