Renaming for succinctness and reformatting

--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -79,6 +79,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hillstrom Dataset**\n",
+    "\n",
+    "An email marketing dataset from Kevin Hillstrom's MineThatData blog."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
