--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -26,9 +26,8 @@
     "from causeinfer.data import mayo_pbc\n",
     "from causeinfer.utilities import plot_unit_distributions, train_test_split, over_sample\n",
     "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
-    "from causeinfer.standard_algorithms import InteractionTerm\n",
-    "from causeinfer.standard_algorithms import BinaryClassTransformation\n",
-    "from causeinfer.standard_algorithms import QuaternaryClassTransformation\n",
+    "from causeinfer.standard_algorithms import BinaryClassTransformation as BCT\n",
+    "from causeinfer.standard_algorithms import QuaternaryClassTransformation as QCT\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 16)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -93,7 +92,7 @@
    "outputs": [],
    "source": [
     "# The full mostly unformatted dataset is loaded\n",
-    "data_raw = mayo_pbc.load_mayo_pbc(data_path=\"/datasets/mayo_pbc.text\",\n",
+    "data_raw = mayo_pbc.load_mayo_pbc(user_file_path=\"datasets/mayo_pbc.text\",\n",
     "                                  format_covariates=False,\n",
     "                                  normalize=False)\n",
     "\n",
@@ -118,7 +117,7 @@
    "outputs": [],
    "source": [
     "# The formatted dataset is loaded\n",
-    "data_mayo_pbc = mayo_pbc.load_mayo_pbc(data_path=\"/datasets/mayo_pbc.text\",\n",
+    "data_mayo_pbc = mayo_pbc.load_mayo_pbc(user_file_path=\"datasets/mayo_pbc.text\",\n",
     "                                       format_covariates=True, \n",
     "                                       normalize=True)\n",
     "\n",
@@ -329,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "two_model_effect = two_model.predict(X_test)"
+    "two_model_effects = two_model.predict(X_test)"
    ]
   },
   {
@@ -355,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interaction_term_effect = interaction_term.predict(X_test)"
+    "interaction_term_effects = interaction_term.predict(X_test)"
    ]
   },
   {
@@ -378,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_transformation = BinaryClassTransformation()\n",
+    "b_transformation = BCT()\n",
     "b_transformation.fit(X_train, y_train, w_train)"
    ]
   },
@@ -388,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_transformation_effect = b_transformation.predict(X_test)"
+    "b_transformation_effects = b_transformation.predict(X_test)"
    ]
   },
   {
@@ -404,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_transformation = QuaternaryClassTransformation()\n",
+    "q_transformation = QCT()\n",
     "q_transformation.fit(X_train, y_train, w_train)"
    ]
   },
@@ -414,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_transformation_effect = q_transformation.predict(X_test)"
+    "q_transformation_effects = q_transformation.predict(X_test)"
    ]
   },
   {
