Changed two model and interaction term to predict_proba, and made RandomForest the default s.t. the focus is tree/forest models, which is further reflected in the README

--- a/examples/business_hilstrom.ipynb
+++ b/examples/business_hilstrom.ipynb
@@ -40,6 +40,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "from causeinfer.data import hillstrom\n",
     "from causeinfer.utilities import plot_unit_distributions, train_test_split, over_sample\n",
     "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
@@ -346,7 +348,8 @@
    },
    "outputs": [],
    "source": [
-    "two_model = TwoModel()"
+    "two_model = TwoModel(treatment_model=RandomForestClassifier(),\n",
+    "                     control_model=RandomForestClassifier())"
    ]
   },
   {
@@ -409,7 +412,7 @@
    },
    "outputs": [],
    "source": [
-    "interaction_term = InteractionTerm()"
+    "interaction_term = InteractionTerm(model=RandomForestClassifier())"
    ]
   },
   {
@@ -479,7 +482,7 @@
    },
    "outputs": [],
    "source": [
-    "bct = BinaryClassTransformation()"
+    "bct = BinaryClassTransformation(model=RandomForestClassifier())"
    ]
   },
   {
@@ -542,7 +545,7 @@
    },
    "outputs": [],
    "source": [
-    "qct = QuaternaryClassTransformation()"
+    "qct = QuaternaryClassTransformation(model=RandomForestClassifier())"
    ]
   },
   {
