--- a/examples/socio_econ_cmf_micro.ipynb
+++ b/examples/socio_econ_cmf_micro.ipynb
@@ -21,9 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-02T15:40:56.249086Z",
+     "start_time": "2020-02-02T15:40:55.376368Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'causeinfer.data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-342d2457d1de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestRegressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcauseinfer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcmf_micro\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcauseinfer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot_unit_distributions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mover_sample\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcauseinfer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstandard_algorithms\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTwoModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mInteractionTerm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'causeinfer.data'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -32,13 +49,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "from causeinfer.data import cmf_micro\n",
     "from causeinfer.utils import plot_unit_distributions, train_test_split, over_sample\n",
     "from causeinfer.standard_algorithms import TwoModel, InteractionTerm\n",
-    "from causeinfer.standard_algorithms import BinaryTransformation\n",
-    "from causeinfer.standard_algorithms import QuaternaryTransformation\n",
     "from causeinfer.evaluation import qini_score, auuc_score\n",
     "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
     "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
