--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -344,7 +344,9 @@
     "                                       normalize=True)\n",
     "\n",
     "df = pd.DataFrame(data_mayo_pbc[\"dataset_full\"], \n",
-    "                  columns=data_mayo_pbc[\"dataset_full_names\"])"
+    "                  columns=data_mayo_pbc[\"dataset_full_names\"])\n",
+    "display(df.head())\n",
+    "df.shape"
    ]
   },
   {
