--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -1702,24 +1702,20 @@
    "outputs": [],
    "source": [
     "# Treatment and control probability subtraction\n",
-    "tm_effects = [model_eval_dict['Mayo PBC']['TwoModel']['avg_preds'][i][0] \\\n",
-    "              - model_eval_dict['Mayo PBC']['TwoModel']['avg_preds'][i][1] \\\n",
-    "              for i in range(len(model_eval_dict['Mayo PBC']['TwoModel']['avg_preds']))]\n",
+    "tm_effects = [pred[0] - pred[1] \\\n",
+    "              for pred in model_eval_dict['Mayo PBC']['TwoModel']['avg_preds']]\n",
     "\n",
     "# Treatment interaction and control interaction probability subtraction\n",
-    "it_effects = [model_eval_dict['Mayo PBC']['InteractionTerm']['avg_preds'][i][0] \\\n",
-    "              - model_eval_dict['Mayo PBC']['InteractionTerm']['avg_preds'][i][1] \\\n",
-    "              for i in range(len(model_eval_dict['Mayo PBC']['InteractionTerm']['avg_preds']))]\n",
+    "it_effects = [pred[0] - pred[1] \\\n",
+    "              for pred in model_eval_dict['Mayo PBC']['InteractionTerm']['avg_preds']]\n",
     "\n",
     "# Bianry favorable and unfavorable class probability subtraction\n",
-    "bt_effects = [model_eval_dict['Mayo PBC']['BinaryTransformation']['avg_preds'][i][0] \\\n",
-    "              - model_eval_dict['Mayo PBC']['BinaryTransformation']['avg_preds'][i][1] \\\n",
-    "              for i in range(len(model_eval_dict['Mayo PBC']['BinaryTransformation']['avg_preds']))]\n",
+    "bt_effects = [pred[0] - pred[1] \\\n",
+    "              for i in model_eval_dict['Mayo PBC']['BinaryTransformation']['avg_preds']]\n",
     "\n",
     "# Quaternary favorable and unfavorable class probability subtraction\n",
-    "qt_effects = [model_eval_dict['Mayo PBC']['QuaternaryTransformation']['avg_preds'][i][0] \\\n",
-    "              - model_eval_dict['Mayo PBC']['QuaternaryTransformation']['avg_preds'][i][1] \\\n",
-    "              for i in range(len(model_eval_dict['Mayo PBC']['QuaternaryTransformation']['avg_preds']))]"
+    "qt_effects = [pred[0] - pred[1] \\\n",
+    "              for pred in model_eval_dict['Mayo PBC']['QuaternaryTransformation']['avg_preds']]"
    ]
   },
   {
