--- a/examples/socio_econ_cmf_micro.ipynb
+++ b/examples/socio_econ_cmf_micro.ipynb
@@ -3709,14 +3709,12 @@
    "outputs": [],
    "source": [
     "# Treatment and control prediction subtraction\n",
-    "tm_effects = [model_eval_dict['CMF Microfinance']['TwoModel']['avg_preds'][i][0] \\\n",
-    "              - model_eval_dict['CMF Microfinance']['TwoModel']['avg_preds'][i][1] \\\n",
-    "              for i in range(len(model_eval_dict['CMF Microfinance']['TwoModel']['avg_preds']))]\n",
+    "tm_effects = [pred[0] - pred[1] \\\n",
+    "              for pred in model_eval_dict['CMF Microfinance']['TwoModel']['avg_preds']]\n",
     "\n",
     "# Treatment interaction and control interaction prediction subtraction\n",
-    "it_effects = [model_eval_dict['CMF Microfinance']['InteractionTerm']['avg_preds'][i][0] \\\n",
-    "              - model_eval_dict['CMF Microfinance']['InteractionTerm']['avg_preds'][i][1] \\\n",
-    "              for i in range(len(model_eval_dict['CMF Microfinance']['InteractionTerm']['avg_preds']))]"
+    "it_effects = [pred[0] - pred[1] \\\n",
+    "              for pred in model_eval_dict['CMF Microfinance']['InteractionTerm']['avg_preds']]"
    ]
   },
   {
